<resources>

    <!-- Stores all the string data that are used in the application -->
    <string name="app_name">NutriSafe</string>

    <!-- For navigation drawer -->
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For add meal fragment -->
    <string name="add_meal_text">Add Meal (up to 3 items)</string>
    <string name="added_item_text">Item </string>
    <string name="add_more_text">Add more</string>
    <string name="calculate_text">Calculate Calorie</string>
    <string name="default_calories">0.0</string>
    <string name="calories_text">Calories</string>

    <!-- For all images used in the application -->
    <string name="image_text">image</string>

    <!-- For search view -->
    <string name="search_hint_text">Search for category/item...</string>
    <string name="search_not_found_tip_text">Tip: Please refine your search or search for a smaller word and try again...</string>

    <!-- For about our application -->
    <string name="nutrisafe_text">NutriSafe</string>
    <string name="nutrisafe_mail_text">nutrisafe@gmail.com</string>

    <!-- For individual item nutrient information xml -->
    <string name="nutrient_text">Nutrient Type</string>
    <string name="value_text">Value</string>
    <string name="quote_text">EAT FIT STAY FIT</string>

    <!-- For home fragment xml -->
    <string name="see_more_text">See more ></string>


    <!-- For blog fragment xml -->
    <string name="healthline">Healthline is raising the bar  At Healthline, we pride ourselves on the quality, research, and transparency we put into every article.\nBlog: https://www.healthline.com/</string>
    <string name="therroastedroot">On this site, you will find nutrient-rich low-inflammatory or anti-inflammatory recipes that are primarily centered around vegetables and meat.  I specialize in recipes that are focused on dietary restrictions – vegetarian, vegan, paleo, keto and gluten-free eaters will find a plethora of meal options here, as well as folks who eat a Low-FODMAP diet.\nBlog: https://www.theroastedroot.net/</string>
    <string name="runningonrealfood">Running on Real Food is a vegan food blog that focuses on simple, healthy plant-based recipes anyone will love. You’ll also find a wealth of free workouts and articles on health, wellness and nutrition.\nBlog: https://runningonrealfood.com/ </string>
    <string name="ohsheglows">Oh She Glows – an award-winning recipe blog featuring over 500 healthy recipes (and growing)! For the past 6 years, shareing energizing, plant-based recipes. The goal is to inspire you to embrace more plant-based foods in your diet without feeling the least bit deprived.\nBlog: https://ohsheglows.com/</string>
    <string name="mynewroots">My New Roots, Since October 2007, this blog has been the place to share the edible inspirations from author\'s playtime in the kitchen, and author\'s deep love for whole foods. The recipes and ideas you’ll find here revolve around author\'s plant-based way of eating, and author hopes that through the simple and delicious dishes created, you too will discover a whole new world of flavour and nourishment. \nBlog: https://www.mynewroots.org/</string>
    <string name="newsroots_url">https://www.mynewroots.org/</string>
    <string name="ohsheglows_url">https://ohsheglows.com/</string>
    <string name="runningonrealfood_url">https://runningonrealfood.com/</string>
    <string name="therroastedroot_url">https://www.theroastedroot.net/</string>
    <string name="healthline_url">https://www.healthline.com/</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="age_text">Age</string>
    <string name="height_text">Height</string>
    <string name="weight_text">Weight</string>
    <string name="cm_text">cm</string>
    <string name="kg_text">kg</string>
    <string name="calculate_bmr_text">Calculate BMR</string>
    <string name="calories_day">Calories/day</string>
    <string name="daily_needs">Daily calorie needs based on activity level</string>
    <string name="input_missing_text">Input values are missing!</string>
    <string name="close_text">Close</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="year_text">years</string>

</resources>
