<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:padding="10dp"
    android:scrollbarThumbVertical="@color/colorPrimary"
    tools:context=".views.fragment.FragmentBmrCalculator">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bmr"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="106dp"
            android:layout_height="36dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="64dp"
            android:text="@string/gender_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="84dp"
            android:layout_height="42dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="30dp"
            android:text="@string/age_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <EditText
            android:id="@+id/ageValue"
            android:layout_width="113dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="120dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/textYear"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="135dp"
            android:text="@string/year_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ageValue"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/height_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAge" />

        <EditText
            android:id="@+id/bmrheight"
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="120dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageValue" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="89dp"
            android:layout_height="44dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/weight_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="One among the following fields has errors:\n1. Age is not in the range 16-79\n2. One or more fields doesn't have data\n3. One or more fields do not have valid data like height or weight is having only '.'"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight" />

        <Button
            android:id="@+id/bmrfindbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@android:color/holo_blue_light"
            android:padding="10dp"
            android:text="@string/calculate_bmr_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_msg" />

        <TextView
            android:id="@+id/bmrValue"
            android:layout_width="160dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:background="@color/blue_background"
            android:focusable="false"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmrfindbutton" />

        <EditText
            android:id="@+id/bmrweight"
            android:layout_width="113dp"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="120dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmrheight" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="313dp"
            android:layout_height="43dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/male_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:text="@string/female_text"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="64dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:text="@string/cm_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/bmrheight"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="67dp"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/kg_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/bmrweight"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/calories_day"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmrValue" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="332dp"
            android:layout_height="24dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/daily_needs"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="384dp"
            android:layout_height="375dp"
            android:src="@drawable/bmr1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>